--- a/README
+++ b/README
@@ -1,4 +1,9 @@
-This is your new Play application
+Tweet Poetry 
 =====================================
 
-This file will be packaged with your application, when using `play dist`.
+Tweet poetry is an application that extracts famous quotations shared on Twitter 
+Quotations are streamed to a Play web app 
+Quotations are also stored in a MongoDB database to perform analytics and to grow a Twitter-sourced quotation database 
+We love contributions 
+
+
