dockerise the project

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Twisdom.li
+Twisdom.org
 =====================================
 
 Built on top of Scala Play 2.2.1 + twitter4j + akka.io + reactivemongo
